Restrustrue packages and upgrade versions